k8s/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: watchman
spec:
  containers:
  - name: debug
    image: busybox
    command: ['sleep', '3600']
  restartPolicy: Never
