k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: watchman
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: hatakekakashihk/watchmanbackend:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "512Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: watchman
spec:
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
